New cofog mapping

--- a/CGE_database_government_accounts.ipynb
+++ b/CGE_database_government_accounts.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# Choose base year for data:\n",
-    "baseYear = 2014\n",
+    "baseYear = 2015\n",
     "# Raw data folder:\n",
     "rawFolder = \"rawdata\"\n",
     "# Folder for output HAR-files:\n",
@@ -1183,7 +1183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Negative values in [(77, '2014', -83.0)]\n"
+      "Negative values in [(77, '2015', -152.0)]\n"
      ]
     }
    ],
@@ -1201,7 +1201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I_84 S1314 -83.0 set to zero!\n"
+      "I_84 S1314 -152.0 set to zero!\n"
      ]
     }
    ],
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
        "True"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,40 +1430,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Using COFOG expenditures to estimate government consumption by sector and by commodity:\n",
     "com2gov = {\n",
-    "\"C_01\":    \"G0402\", # Agriculture and hunting -> Agriculture, forestry, fishing and hunting\n",
-    "\"C_02_03\": \"G0402\", # Forestry, Fishing -> Agriculture, forestry, fishing and hunting\n",
-    "\"C_05_09\": \"G0404\", # Mining and quarrying -> Mining, manufacturing, construction\n",
-    "'C_10_12': \"G0404\", # Food industry, etc. -> Mining, manufacturing, construction\n",
-    "'C_13_15': \"G0404\", # Textile, clothing -> Mining, manufacturing, construction\n",
-    "'C_16':    \"G0404\", # Woodworking -> Mining, manufacturing, construction\n",
-    "'C_17_18': \"G0404\", # Paper industry -> Mining, manufacturing, construction\n",
-    "'C_19_22': \"G0404\", # Chemical industry -> Mining, manufacturing, construction\n",
-    "'C_23':    \"G0404\", # Non-metallic mineral products -> Mining, manufacturing, construction\n",
-    "'C_24_25': \"G0404\", # Basic metals -> Mining, manufacturing, construction\n",
-    "'C_26_27': \"G0404\", # Electrical and electronic products -> Mining, manufacturing, construction\n",
-    "'C_28':    \"G0404\", # Machinery and equipment -> Mining, manufacturing, construction\n",
-    "'C_29_30': \"G0404\", # Transport equipment -> Mining, manufacturing, construction\n",
-    "'C_31_33': \"G0404\", # Furniture / Other manucturing -> Mining, manufacturing, construction\n",
-    "'C_35_39': \"G0603\", # Water supply and waste management -> Water supply\n",
-    "'C_41_43': \"G0404\", # Construction -> Mining, manufacturing, construction\n",
-    "'C_45_47': \"G0407\", # Trade and repair of motor vehicles -> Other industries\n",
-    "'C_49_53': \"G0405\", # Transportation and storage -> Transport\n",
-    "'C_55_56': \"G0407\", # Accommodation and food service -> Other industries\n",
-    "'C_58_63': \"G0407\", # Publishing activities -> Other industries\n",
-    "'C_64_66': \"G0407\", # Financial and insurance activities -> Other industries\n",
-    "'C_68':    \"G0407\", # Other real estate activities -> Other industries\n",
-    "'C_68A':   \"G0407\", # Letting and operation of dwellings -> Other industries\n",
-    "'C_69_75': \"G0105\", # Professional, scientific and technical activities -> R&D general public services\n",
+    "\"C_01\":    \"G0\", # Agriculture and hunting -> All functions\n",
+    "\"C_02_03\": \"G0\", # Forestry, Fishing -> \n",
+    "\"C_05_09\": \"G0\", # Mining and quarrying -> \n",
+    "'C_10_12': \"G0\", # Food industry, etc. -> \n",
+    "'C_13_15': \"G0\", # Textile, clothing -> \n",
+    "'C_16':    \"G0\", # Woodworking -> \n",
+    "'C_17_18': \"G0\", # Paper industry ->  All functions\n",
+    "'C_19_22': \"G07\", # Chemical industry -> Health\n",
+    "'C_23':    \"G0\", # Non-metallic mineral products ->  All functions\n",
+    "'C_24_25': \"G0\", # Basic metals -> \n",
+    "'C_26_27': \"G0\", # Electrical and electronic products -> \n",
+    "'C_28':    \"G0\", # Machinery and equipment -> \n",
+    "'C_29_30': \"G0\", # Transport equipment -> \n",
+    "'C_31_33': \"G0\", # Furniture / Other manucturing -> \n",
+    "'C_35_39': \"G0\", # Water supply and waste management -> \n",
+    "'C_41_43': \"G0\", # Construction -> \n",
+    "'C_45_47': \"G0\", # Trade and repair of motor vehicles -> \n",
+    "'C_49_53': \"G0\", # Transportation and storage -> \n",
+    "'C_55_56': \"G0\", # Accommodation and food service -> \n",
+    "'C_58_63': \"G0\", # Publishing activities -> \n",
+    "'C_64_66': \"G0\", # Financial and insurance activities -> \n",
+    "'C_68':    \"G0\", # Other real estate activities -> \n",
+    "'C_68A':   \"G0\", # Letting and operation of dwellings -> \n",
+    "'C_69_75': \"G0\", # Professional, scientific and technical activities -> \n",
     "'C_77_82': \"G01\",   # Administrative and support service activities -> General public services\n",
-    "'C_84':    \"G10\",   # Public administration and social security -> Social protection\n",
+    "'C_84':    \"G0\",   # Public administration and social security -> All functions  \n",
     "'C_85':    \"G09\",   # Education -> Education\n",
-    "'C_86_88': \"G07\",   # Human health and social work activities -> Health\n",
+    "'C_86_88': \"G07\",   # Human health and social work activities -> Health ! Should include also social protecton, but share is pretty same\n",
     "'C_90_96': \"G08\",   # Arts, entertainment and recreation -> Recreation, culture and religion\n",
     "'C_97_98': \"G0\",    # Household service activities -> All functions\n",
     "}"
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,6 +1494,7 @@
     "                      (cofog[\"Transaction\"] == \"P3K\") &\\\n",
     "                      (cofog[\"Function\"] == mapping)][str(baseYear)])\n",
     "        \n",
+    "\n",
     "        sectorShare = sectorLevel / total\n",
     "        \n",
     "        sectorShares.loc[c][s] = sectorShare\n",
@@ -1503,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1534,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1578,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1652,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1682,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1715,7 @@
        "True"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
