fix regind error

--- a/CGE_basedata.ipynb
+++ b/CGE_basedata.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
        "True"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
        "True"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1867,7 @@
        "I_61      4295.004   4294.999       0.005"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1906,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1939,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1979,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2031,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2097,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2120,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2154,12 +2154,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Query for regional industy classification: (StatFin: Output and employment by region)\n",
-    "regIndRaw = [x[\"values\"] for x in dgf.getParams(\"statfin_altp_pxt_008.px\", \"names\") if x[\"code\"] == \"Toimiala\"][0]\n",
+    "regIndRaw = [x[\"values\"] for x in dgf.getParams(\"kan/altp/statfin_altp_pxt_008.px\", \"names\") if x[\"code\"] == \"Toimiala\"][0]\n",
     "# ['0', '01', '02_03', '05_09', '10_12', '13_15', '16', '17_18', '19_22', '23', '24_25', '26_27', \n",
     "# '28', '29_30', '31_33', '35_39', '41_43', '45_47', '49_53', '55_56', '58_63', '64_66', '681+68209+683', \n",
     "# '68201_68202', '69_75', '77_82', '84', '85', '86_88', '90_96', '97_98']"
@@ -2167,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2214,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2275,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,6 +2298,13 @@
    "source": [
     "# END OF PROGRAM"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
