Fix link in capital dyn

--- a/CGE_capital_dynamics.ipynb
+++ b/CGE_capital_dynamics.ipynb
@@ -507,15 +507,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OK for Capital formation FP_prev_yr\n",
-      "OK for Capital formation FP_2010\n",
       "OK for Capital formation 2017_prices\n",
       "OK for Capital formation CP\n",
-      "OK for Consumption and retirement FP_2010\n",
+      "OK for Capital formation FP_2010\n",
+      "OK for Capital formation FP_prev_yr\n",
       "OK for Consumption and retirement CP\n",
-      "OK for Production accounts FP_prev_yr\n",
+      "OK for Consumption and retirement FP_2010\n",
+      "OK for Production accounts CP\n",
       "OK for Production accounts FP_2010\n",
-      "OK for Production accounts CP\n"
+      "OK for Production accounts FP_prev_yr\n"
      ]
     }
    ],
@@ -988,7 +988,7 @@
    ],
    "source": [
     "# Then, query consumer price index (CPI) data from Statistics Finland:\n",
-    "urlDict = {\"CPI\": \"statfin_khi_pxt_006.px\"}\n",
+    "urlDict = {\"CPI\": \"/hin/khi/statfin_khi_pxt_006.px\"}\n",
     "# 006 -- Consumer Price Indices, overall index\n",
     "dgf.getData(urlDict)"
    ]
